# dxc

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Dioxus.toml  Makefile  README.md  cliff.toml  package.json  release-please-config.json  release.toml
.cargo/: config.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: publish.yml  release-plz.yml  release.yml
.husky/: pre-commit
examples/: button.rs  icon.rs  image.rs  input.rs  link.rs
examples/assets/style/: layout.css
examples/container/: Cargo.toml
examples/container/src/: common-layout.scss  layout_ahmf.rs  main.rs
examples/icons/: Cargo.toml
examples/icons/src/: main.rs
examples/image/: Cargo.toml
examples/image/src/: main.rs
examples/link/: Cargo.toml
examples/link/src/: main.rs
src/: lib.rs  prelude.rs
src/components/: mod.rs
src/components/aside/: aside.rs  props.rs
src/components/button/: button.rs  button_group.rs  props.rs
src/components/container/: container.rs  mod.rs  props.rs
src/components/focus_trap/: focus_trap.rs  mod.rs  props.rs
src/components/footer/: footer.rs  mod.rs
src/components/header/: header.rs  mod.rs  props.rs
src/components/icon/: icon.rs
src/components/image/: image.rs  mod.rs  props.rs
src/components/image_viewer/: action.rs  image_viewer.rs  props.rs  transform.rs
src/components/input/: input.rs  props.rs
src/components/link/: link.rs  mod.rs  props.rs
src/components/main/: main.rs
src/components/menu/: menu.rs  mod.rs  props.rs
src/components/menu_item/: menu_item.rs  mod.rs  props.rs
src/components/teleport/: mod.rs  props.rs  teleport.rs
src/components/tooltip/: mod.rs  props.rs  root.rs
src/hooks/: use_namespace.rs
src/types/: mod.rs
src/types/components/: button.rs  container.rs  image.rs  image_view.rs  input.rs
