[package]
name = "dxc"
description = "A concise, modern dioxus component library"
keywords = ["ui", "component", "dioxus", "web", "desktop", "scss"]
edition = "2024"
rust-version = "1.89.0"
version = "1.0.0"
authors = ["efahnjoe"]
license = "MIT"
repository = "https://github.com/efahnjoe/dxc"
homepage = "https://github.com/efahnjoe/dxc#README.md"
readme = "README.md"

[dependencies]
dioxus = { version = "^0.7.3", features = ["router", "fullstack"] }
dxc-icons = "^0.3.0"
dxc-macros = "^0.2.0"
dxc-theme-chalk = "0.1.0"
once_cell = "^1.21.3"
serde = { version = "^1.0.228", features = ["derive"] }
strum = { version = "^0.27.2", features = ["derive"] }

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

# Examples
# If you want to run the example, try this: dx serve --plantform web --example [name]
# [[example]]
# name = "button"
# path = "examples/button/main.rs"
